--- a/index.html
+++ b/index.html
@@ -305,27 +305,30 @@
                         </div>
                     ) : gameState === 'PLAYING' ? (
                         <div className="flex flex-col items-center">
-                            <div className="mb-8 flex items-center space-x-3 bg-slate-50 px-5 py-2 rounded-2xl border border-slate-100">
+                            <div className="mb-6 flex items-center space-x-3 bg-slate-50 px-5 py-2 rounded-2xl border border-white shadow-sm">
                                 <span className="text-slate-400 text-[10px] font-black uppercase tracking-widest">目標刺激:</span>
                                 <div className="w-4 h-4 rounded-full shadow-sm" style={{ backgroundColor: targetColor.hex }}></div>
                                 <span className="font-bold text-slate-800">{targetColor.name}</span>
                             </div>
 
-                            <div className="h-72 w-full max-w-sm flex flex-col items-center justify-center bg-slate-50 rounded-[2rem] border-2 border-dashed border-slate-200 mb-8 relative shadow-inner overflow-hidden">
-                                {isAdvanced && currentColor && (
-                                    <div className="absolute top-10 text-4xl font-black text-slate-800 animate-fade-in drop-shadow-sm">
-                                        {currentColor.name}
-                                    </div>
-                                )}
-                                <div 
-                                    className="w-40 h-40 rounded-[2.5rem] shadow-2xl transition-all duration-100 transform active:scale-95"
-                                    style={{ backgroundColor: currentColor?.hex || 'transparent' }}
-                                    key={currentColor?.hex}
-                                ></div>
+                            <div className="h-80 w-full max-w-sm flex flex-col items-center justify-center bg-slate-50 rounded-[2.5rem] border-2 border-dashed border-slate-200 mb-8 relative shadow-inner overflow-hidden">
+                                <div className="flex flex-col items-center space-y-6">
+                                    {isAdvanced && currentColor && (
+                                        <div className="text-5xl font-black text-slate-800 animate-fade-in drop-shadow-md z-10 select-none">
+                                            {currentColor.name}
+                                        </div>
+                                    )}
+                                    <div 
+                                        className="w-40 h-40 rounded-[2.5rem] shadow-2xl transition-all duration-100 transform active:scale-95 ring-8 ring-white/30"
+                                        style={{ backgroundColor: currentColor?.hex || 'transparent' }}
+                                        key={currentColor?.hex}
+                                    ></div>
+                                </div>
                             </div>
 
                             <button
                                 onMouseDown={handleHit}
+                                onTouchStart={(e) => { e.preventDefault(); handleHit(); }}
                                 className="w-full max-w-sm bg-slate-900 hover:bg-black text-white font-black py-8 rounded-[2rem] shadow-2xl transition-all active:scale-90 text-2xl uppercase tracking-widest ring-offset-4 ring-indigo-500 focus:ring-4"
                             >
                                 反應 (HIT)
